--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,36 +1,40 @@
-# Path to local analysis folder
-# analysis_path: /home/alex/Dokumente/02_OLCIR/80_testing_gen_inst_pipeline/
+# Complete path to local analysis folder
+# Example: /home/user1/Documents/project1/01_tcga_data_analysis_1/
 analysis_path: /home/alex/Dokumente/02_OLCIR/81_test_pipeline/
 
 # Original (prior) manifest files names (in folder <analysis_path>/sample_sheets/manifests)
-# Use the list format (put your files in square brackets)
-# Example: [2024-06_manifest_]
+# Use the list format (put your files in square brackets and comma-separated)
+# Example: [2024-06_manifest_2.txt, 2024-05_manifest_1.txt]
 manifests_prior: [2024-04-08_gdc_manifest_splice_lusc_prior.txt, 2024-04-08_gdc_manifest_star_counts_lusc_prior.txt]
 
-# Original (prior) sample sheets names in list (in folder <analysis_path>/sample_sheets/sample_sheets_prior)
+# Original (prior) sample sheets names (in folder <analysis_path>/sample_sheets/sample_sheets_prior)
+# Use the list format (put your files in square brackets and comma-separated)
+# Example: [2024-05_sample_sheet_1.tsv, 2024-06_sample_sheet_2.tsv]
 sample_sheets_prior: [2024-04-08_gdc_sample_sheet_splice_lusc_prior.tsv, 2024-04-08_gdc_sample_sheet_star_counts_lusc_prior.tsv]
 
-# Sample sheet with case IDs to filter for (in folder <analysis_path>/sample_sheets). If not wanted or needed, put in: False
+# Sample sheet with case IDs to filter for (in folder <analysis_path>/sample_sheets).
+# If not wanted or needed, put in: False
 sample_sheet_filtering: False
 
-# First_install: if you want to install the gdc-client as a conda environment. Set to True after first installation. If the installatation should be started again, set to "First_install" again
-# True: if you have installed the conda environment as gdc_client within this script (set to True after first installation)
-# Name for conda environment including the TCGA GDC-Client tool: if you want to use your own environment
-# False: do not use this Jupyter Notebook for the gdc-client
+# Conda environment for gdc-client download. Use one of the following options:
+#   First_install: if you want to install the gdc-client as a conda environment. Set to True after first installation. If the installatation should be started again, set to "First_install" again
+#   True: if you have installed the conda environment as gdc_client within this script (automatically set to True after first installation)
+#   <Name for conda environment including the TCGA GDC-Client tool>: if you want to use your own environment
+#   False: do not use this Jupyter Notebook for the gdc-client
 conda_gdc: True
 
-# Manifest file for downloading TCGA data
-# Either enter a list of manifest files (in parentheses) manually (in folder <analysis_path>/sample_sheets/manifests)
+# Specify manifest file for downloading TCGA data
+# Either enter a list of manifest files manually (in folder <analysis_path>/sample_sheets/manifests), use list format (put your files in square brackets and comma-separated)
 # False: use the output of the pipeline
 manifest_for_download: [test_manifest.txt]
 
-# TCGA user token for restricted access files
-# include secured file path with TCGA user token. If none is available, put in: False
+# Optional TCGA user token for restricted access files
+# Include secured file path with TCGA user token. If none is available or necessary, put in: False
 tcga_user_token_file: False
 
-# Snakemake pipeline configuration
-# Conda environment for Snakemake pipeline
+# Snakemake analysis pipeline configuration
+# Name of the conda environment for Snakemake pipeline
 conda_snakemake: Snakemake
-# Threads to use 
+# How many threads to use in the Snakemake pipeline
 snakemake_threads: 4
 
